--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,11 +37,8 @@ jobs:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
-      # run tests!
-      - run: mvn integration-test
-
-      # run Code Coverage
-      - run: mvn cobertura:cobertura
+      # run Tests and Code Coverage!
+      - run: mvn integration-test cobertura:cobertura
 
       - run:
           name: Send to CodeCov
