Initial setup to work with MySQL and Postgres databases. Three groups of profiles are now supported 1. default uses H2 in memory database 2. dev-mysql and prod-mysql use MySQL database. Initial setup of users databases and permissions are in mysql-config.sql To generate table schema use mysql_create.sql and to drop all tables mysql_drop.sql. The project is currently tested with docker image of MySQL 3. dev-postgres and prod-postgres use PostgreSQL database. Initial setup of users databases and permissions are in postgres-config.sql To generate table schema use postgres_create.sql and to drop all tables postgres_drop.sql. The project is currently tested with docker image of PostgreSQL
H2 database is initialized from BootstrapData on application start. SQL databases are initialized (if running for the first time) only with categories. BootstrapData class can still be used for one time generation of data by temporary adding dev-mysql and dev-postgres along with default profile.

FakeDataSourceConfig object has been fixed (still does serve no purpose) and now loads the properties from the datasource.properties

CircleCI badge has been added to the readme.md

--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,4 +1,4 @@
-ds.username="aladjov"
-ds.password="secret"
-ds.name="postgresql"
-ds.url=""
+db-dev.username="pyo_dev_user"
+db-dev.password="PickYourOwn2018"
+db-dev.dbName="pyo_dev"
+db-dev.url="jdbc:postgresql://localhost:5432/pyo_dev"
