--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.technologygardens</groupId>
 	<artifactId>pickyourown</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<url>http://technologygardens.com/</url>
 
 	<name>pickyourown</name>
